fix(www): Fix forced minimum font-size on iOS Safari

--- a/www/static/css/main.css
+++ b/www/static/css/main.css
@@ -258,7 +258,8 @@ pre > code {
     flex-shrink: 0;
     display: block;
     padding: 1em;
-    font-size: .8em;
+    font-size: calc(1em - 2px);
+    -webkit-text-size-adjust: none;
 }
 
 code,
